--- a/main.html
+++ b/main.html
@@ -3,10 +3,34 @@
 <html>
 
 <head>
+    <style>
+        .box{
+            color:purple; 
+            background-color: red;
+            border:2px solid black;
+            text-align:center;
+            margin: auto;   
+width:200px;
+height:200px;
+  /* Center vertically and horizontally */
+  position: absolute;
+  top: 50%;
+  left: 50%;
+        }
+        .main-box {
+            position: absolute;
+  top: 50%;
+  left: 50%;
+        }
+    </style>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+	<div class="box">
+        <div class="main-box">
+		<p>This is center.</p>
+	</div></div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
